Addressed PR feedback